# amm-pinocchio

./: Cargo.toml  Makefile  README.md  package-lock.json
.github/workflows/: ci.yml
bench/: add_liquidity_ix_bench.rs  initializer_ix_bench.rs  swap_ix_bench.rs  withdraw_ix_bench.rs
client/: devnet-test.ts  index.ts  package-lock.json  package.json  tsconfig.json
client/helper/: constants.ts  setup.ts  types.ts  utils.ts
client/instructions/: addLiquidity.ts  initializer.ts  swap.ts  withdraw.ts
src/: constants.rs  entrypoint.rs  helper.rs  lib.rs
src/instructions/: add_liquidity.rs  initializer.rs  mod.rs  swap.rs  utils.rs  validators.rs  withdraw.rs
src/states/: mod.rs  pool.rs
tests/: debugger.rs  test.rs  test_add_liquidity.rs  test_initializer.rs  test_swap.rs  test_withdraw.rs
tests/elfs/: amm_pinocchio
