cargo-features = ["edition2024"]

[package]
name = "amm-pinocchio"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "initializer_ix_bench"
path = "bench/initializer_ix_bench.rs"
harness = false

[[bench]]
name = "add_liquidity_ix_bench"
path = "bench/add_liquidity_ix_bench.rs"
harness = false

[[bench]]
name = "swap_ix_bench"
path = "bench/swap_ix_bench.rs"
harness = false

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"

[dev-dependencies]
mollusk-svm = "0.9.0"
mollusk-svm-bencher = "0.9.0"
solana-sdk = "3.0.0"
spl-token = "9.0.0"
